Add style to prevent text selection to allow drag

--- a/themes/src/main/themes/VAADIN/themes/valo/shared/_overlay.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/shared/_overlay.scss
@@ -275,6 +275,12 @@ $v-selection-item-selection-color: $v-selection-color !default;
   }
 }
 
+@mixin valo-draggable {
+  .v-draggable {
+    user-select: none !important;
+  }
+}
+
 /**
  * Outputs the styles for generic dragging ghost elements.
  *
