Move Vaadin-Icons inside valo file structure

--- a/themes/src/main/themes/VAADIN/themes/valo/fonts/_fonts.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/fonts/_fonts.scss
@@ -4,7 +4,7 @@
 @import "roboto/roboto";
 @import "lato/lato";
 @import "lora/lora";
-@import "../../../addons/vaadin-icons/vaadin-icons.scss";
+@import "vaadin-icons/vaadin-icons.scss";
 
 /// Include VaadinIcons. They are included in Valo
 /// since Vaadin Framework version 8.0 (#7979)
