Add Payara as an officially supported server

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -487,6 +487,7 @@
             <li>Wildfly 8-10</li>
             <li>Jetty 8-9</li>
             <li>Glassfish 4</li>
+            <li>Payara Server 164</li>
         </ul>
 
         <p>
