--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -94,6 +94,8 @@
                 (<a href="http://dev.vaadin.com/ticket/19683">#19683</a>)</li>
             <li>Vaadin can now automatically use default widgetset AppWidgetset optionally generated
                 by the latest Vaadin Maven plug-in (<a href="http://dev.vaadin.com/ticket/19675">#19675</a>)</li>
+            <li>Context click events are now generated on iOS devices
+                (<a href="http://dev.vaadin.com/ticket/19406">#19406</a>)</li>
         </ul>
 
         <p>
@@ -118,8 +120,6 @@
         <h3 id="knownissues">Known Issues and Limitations</h3>
         <ul>
             <li>Vaadin TouchKit versions prior to 4.1.0 do not work with Vaadin 7.7. Please use version 4.1.0 or above.</li>
-            <li>Context click events are not generated on iOS devices
-                (<a href="http://dev.vaadin.com/ticket/19367">#19367</a>)</li>
             <li>Drag'n'drop in a Table doesn't work on touch devices running
                 Internet Explorer (Windows Phone, Surface)
                 (<a href="http://dev.vaadin.com/ticket/13737">#13737</a>)
