Add release notes mention of context click events

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -92,6 +92,7 @@
             <li>Vaadin Framework is using GWT 2.8, allowing client side code to use Java 8</li>
             <li>Other Framework dependencies including Atmosphere have been upgraded</li>
             <li>Easier to integrate web components using HTML imports (<tt>@HtmlImport</tt>) and custom tag name support for <tt>AbstractJavaScriptComponent</tt></li>
+            <li>Context click events are now generated on iOS devices (<a href="https://github.com/vaadin/framework/issues/7387">#7387</a>)</li>
         </ul>
 
         <p>
