Mention VaadinServiceInitListener and JS state diff in release notes (#8607)
* Mention VaadinServiceInitListener and JS state diff in release notes

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -92,8 +92,9 @@
             <li>Vaadin Framework is now based on Java 8</li>
             <li>Vaadin Framework is using GWT 2.8, allowing client side code to use Java 8</li>
             <li>Other Framework dependencies including Atmosphere have been upgraded</li>
-            <li>Easier to integrate web components using HTML imports (<tt>@HtmlImport</tt>) and custom tag name support for <tt>AbstractJavaScriptComponent</tt></li>
+            <li>Easier to integrate web components using HTML imports (<tt>@HtmlImport</tt>), custom tag name support for <tt>AbstractJavaScriptComponent</tt> and more efficient transmission of shared state changes for JavaScript components</li>
             <li>Context click events are now generated on iOS devices (<a href="https://github.com/vaadin/framework/issues/7387">#7387</a>)</li>
+            <li>Add-ons can use <tt>META-INF/services/com.vaadin.server.VaadinServiceInitListener</tt> to automatically hook into the initialization sequence of the framework</li>
         </ul>
 
         <p>
