Update release notes to say this is a maintenance version

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -59,11 +59,11 @@
 
         <p>
             Vaadin Framework @version@ is a
-            feature release that includes
+            maintenance release that includes a number of bug fixes, as listed in the <a href="#changelog">change log</a> below.
+            <!-- feature release that includes -->
             <!-- pre-release for evaluating  -->
-            a number of new features and bug fixes, as listed in the <a
-                href="#enhancements">list of enhancements</a> and <a
-                href="#changelog">change log</a> below.
+            <!-- a number of new features and bug fixes, as listed in the -->
+            <!-- <a href="#enhancements">list of enhancements</a> and <a href="#changelog">change log</a> below. -->
         <!-- 
 		This beta release contains breaking changes based on your feedback on the previous beta version,
 		and we may change things on future beta versions based on your feedback if necessary.
@@ -76,7 +76,6 @@
 
         <!-- ================================================================ -->
         <h3 id="changelog">Change Log for Vaadin Framework @version@</h3>
-	<!-- @release-notes-changelog@ -->
         <p>
             You can find the full list of all changes <a
                 href="https://github.com/vaadin/framework/releases/tag/@version@">in	
