Fixes after review

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_nativeselect.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_nativeselect.scss
@@ -13,6 +13,9 @@
   .#{$primary-stylename}-select {
     display: block;
 
+    width:100%;
+    height: 100%;
+
     + .v-textfield {
       width: auto !important;
       margin-top: round($v-unit-size/4);
