--- a/themes/src/main/themes/VAADIN/themes/valo/components/_nativeselect.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_nativeselect.scss
@@ -13,8 +13,8 @@
   .#{$primary-stylename}-select {
     display: block;
 
-    width:100%;
-    height: 100%;
+    max-width:100%;
+    max-height: 100%;
 
     + .v-textfield {
       width: auto !important;
