Add simple theming for collapse disabled nodes

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
@@ -42,6 +42,12 @@ $tg-expander-padding: 10px !default;
         content: $tg-expander-char-collapsed;
       }
     }
+
+    &.collapse-disabled {
+      opacity: .3;
+      filter: alpha(opacity=30);
+      cursor: default;
+    }
   }
 
   // Hierarchy depth styling
