Documentation and theme fixes

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
@@ -44,8 +44,7 @@ $tg-expander-padding: 10px !default;
     }
 
     &.collapse-disabled {
-      opacity: .3;
-      filter: alpha(opacity=30);
+      @include opacity($v-disabled-opacity);
       cursor: default;
     }
   }
