Add feature to disable collapsing items in TreeGrid (#8879)
Fixes #8846

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
@@ -42,6 +42,11 @@ $tg-expander-padding: 10px !default;
         content: $tg-expander-char-collapsed;
       }
     }
+
+    &.collapse-disabled {
+      @include opacity($v-disabled-opacity);
+      cursor: default;
+    }
   }
 
   // Hierarchy depth styling
