Make TreeGrid follow framework style conventions

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
@@ -145,8 +145,10 @@
   @if v-is-included(tree) {
     @include valo-tree;
   }
-  
-  @include treegrid;
+
+  @if v-is-included(treegrid) {
+    @include valo-treegrid;
+  }
 
   @if v-is-included(table) or v-is-included(treetable) {
     @include valo-table;
