--- a/themes/src/main/themes/VAADIN/themes/valo/shared/_variables.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/shared/_variables.scss
@@ -490,6 +490,7 @@ $v-included-components:
     textarea,
     richtextarea,
     tree,
+    treegrid,
     treetable,
     twincolselect,
     upload,
