Make it possible for grid drop target to accept dragged data when grid is empty (#9068)

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -815,6 +815,13 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
     min-width: 30px;
   }
 
+
+  // Drag and drop
+  .#{$primary-stylename}-droptarget {
+    width: 100%;
+    height: 100%;
+  }
+
 }
 
 
