Change style name to update automatically

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -879,7 +879,7 @@ $v-grid-drag-indicator-color: $v-focus-color;
 }
 
   // Drag and drop
-  .#{$primary-stylename}-droptarget {
+  .#{$primary-stylename}-body-droptarget {
     width: 100%;
     height: 100%;
   }
