--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -817,7 +817,7 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
 
 
   // Drag and drop
-  .#{$primary-stylename}-droptarget {
+  .#{$primary-stylename}-body-droptarget {
     width: 100%;
     height: 100%;
   }
