--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -241,7 +241,10 @@
             vaadin-server, vaadin-shared etc. The package
             vaadin-compatibility-client-compiled contains the widgetset
             <tt>com.vaadin.v7.Vaadin7WidgetSet</tt> which can be used instead of
-            <tt>DefaultWidgetSet</tt>.
+            <tt>DefaultWidgetSet</tt>. Please note that the rename to com.vaadin.v7
+            has only been applied to classes that are only relevant for the
+            compatiblity modules. Some classes have also been renamed while still
+            being part of the non-compatibility modules.
         </p>
         <p>
         All applications using either <tt>Reindeer</tt>, <tt>Runo</tt>, <tt>Chameleon</tt> or <tt>Base</tt> theme must include the <tt>vaadin-compability-themes</tt> package.
