--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -243,7 +243,7 @@
             <tt>com.vaadin.v7.Vaadin7WidgetSet</tt> which can be used instead of
             <tt>DefaultWidgetSet</tt>. Please note that the rename to com.vaadin.v7
             has only been applied to classes that are only relevant for the
-            compatiblity modules. Some classes have also been renamed while still
+            compatibility modules. Some classes have also been renamed while still
             being part of the non-compatibility modules.
         </p>
         <p>
