Add mention in release notes

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -116,6 +116,7 @@
                 See also <a href="http://dev.vaadin.com/ticket/8171">#8171</a></li>
             <li>The way we handle GWT dependencies has been completely changed. See <a href="#gwtdep">this section</a> for more details.</li>
             <li>Client side compilation with Maven is now in strict mode by default, failing the compilation on any errors.</li>
+            <li>Client side classes extending either AbstractGridMouseEvent or AbstractGridKeyEvent must now override the method getAssociatedType.</li>
         </ul>
         <h3 id="knownissues">Known Issues and Limitations</h3>
         <ul>
