--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -85,6 +85,7 @@
             <li>Components In Grid</li>
             <li>HTML5 Drag and Drop support</li>
             <li>TreeGrid and HierarchicalDataProvider</li>
+            <li>Improved OSGi Support</li>
         </ul>
 
         </p>
@@ -102,6 +103,7 @@
         <li>The <tt>TreeGrid</tt> component replaces both <tt>TreeTable</tt> and <tt>Tree</tt> component</li>
         <li>The <tt>HierarchicalDataProvider</tt> interface replaces <tt>Container.Hierarchical</tt> and <<tt>InMemoryHierarchicalDataProvider</tt> replaces <tt>HierarchicalContainer</tt></li>
         <li>The <tt>DragSourceExtension</tt> and <tt>DropTargetExtension</tt> extensions replace the old DnD features</li>
+        <li>OSGi bundle manifests of Vaadin Framework JARs no longer export <tt>/VAADIN</tt>, and there are new mechanisms for publishing static resources for OSGi</li>
         
         <h2>For incompatible or behaviour-altering changes in 8.0, please see <a href="https://vaadin.com/download/release/8.0/8.0.0/release-notes.html#incompatible">8.0 release notes</a></h2>
         
@@ -372,6 +374,7 @@
 
         <ul>
             <li>Liferay Portal 6.2</li>
+            <li>Liferay Portal 7.0</li>
         </ul>
 
         <p>
