--- a/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
@@ -35,6 +35,7 @@
 @import "textarea";
 @import "tree";
 @import "treegrid";
+@import "newtree";
 @import "treetable";
 @import "twincolselect";
 @import "upload";
@@ -144,6 +145,10 @@
 
   @if v-is-included(tree) {
     @include valo-tree;
+  }
+
+  @if v-is-included(newtree) {
+    @include valo-newtree;
   }
 
   @if v-is-included(treegrid) {
