--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -306,7 +306,7 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
     -ms-user-select: none;
     user-select: none;
   }
-  
+
   .#{$primaryStyleName}-column-resize-simple-indicator {
     position: absolute;
     width: 3px;
@@ -597,6 +597,8 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
   }
 }
 
+$v-grid-drag-indicator-color: $v-focus-color;
+
 /**
  *
  *
@@ -826,6 +828,53 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
     line-height: 30px;
     text-align: center;
     float: left;
+  }
+
+  // Drag and drop
+  .#{$primary-stylename}-row-drag-top, .#{$primary-stylename}-row-drag-bottom, .#{$primary-stylename}-row-drag-bottom {
+    z-index: 100;
+  }
+
+  .#{$primary-stylename}-row-drag-top:before,
+  .#{$primary-stylename}-row-drag-bottom:after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: $v-grid-drag-indicator-color;
+    pointer-events: none;
+    border: none;
+  }
+
+  .#{$primary-stylename}-row-drag-bottom:after {
+    bottom: -1px;
+  }
+
+  .#{$primary-stylename}-row-drag-top:before {
+    top: -1px;
+  }
+
+  .#{$primary-stylename}-row-drag-center:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border: 2px solid $v-grid-drag-indicator-color;
+    pointer-events: none;
+  }
+
+  .#{$primary-stylename}-row-selected {
+    &.#{$primary-stylename}-row-drag-center:after {
+      border-color: darken($v-grid-drag-indicator-color, 10%);
+    }
+
+    &.#{$primary-stylename}-row-drag-top:before,
+    &.#{$primary-stylename}-row-drag-bottom:after {
+      background: darken($v-grid-drag-indicator-color, 10%);
+    }
   }
 }
 
