--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -84,7 +84,7 @@
         <ul>
             <li>Components In Grid</li>
             <li>HTML5 Drag and Drop support</li>
-            <li>TreeGrid and HierarchicalDataProvider</li>
+            <li>TreeGrid, Tree and HierarchicalDataProvider</li>
             <li>Improved OSGi Support</li>
         </ul>
 
@@ -100,7 +100,8 @@
 
         <h2 id="incompatible">Incompatible or Behavior-altering Changes in @version@</h2>
         
-        <li>The <tt>TreeGrid</tt> component replaces both <tt>TreeTable</tt> and <tt>Tree</tt> component</li>
+        <li>The <tt>TreeGrid</tt> component replaces <tt>TreeTable</tt> component</li>
+        <li>The <tt>Tree</tt> component replaces old <tt>Tree</tt> component</li>
         <li>The <tt>HierarchicalDataProvider</tt> interface replaces <tt>Container.Hierarchical</tt> and <<tt>InMemoryHierarchicalDataProvider</tt> replaces <tt>HierarchicalContainer</tt></li>
         <li>The <tt>DragSourceExtension</tt> and <tt>DropTargetExtension</tt> extensions replace the old DnD features</li>
         <li>OSGi bundle manifests of Vaadin Framework JARs no longer export <tt>/VAADIN</tt>, and there are new mechanisms for publishing static resources for OSGi</li>
