--- a/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_all.scss
@@ -35,7 +35,7 @@
 @import "textarea";
 @import "tree";
 @import "treegrid";
-@import "newtree";
+@import "tree8";
 @import "treetable";
 @import "twincolselect";
 @import "upload";
@@ -147,8 +147,8 @@
     @include valo-tree;
   }
 
-  @if v-is-included(newtree) {
-    @include valo-newtree;
+  @if v-is-included(tree8) {
+    @include valo-tree8;
   }
 
   @if v-is-included(treegrid) {
