Add comment to _treegrid.scss

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_treegrid.scss
@@ -82,6 +82,7 @@ $tg-expander-padding: 10px !default;
     }
   }
 
+  // Needed for hiding the included style
   .#{$primary-stylename}-cell-focused {
     position: static;
 
