Make it possible for grid drop target to accept dragged data when grid is empty (#9068)

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -876,6 +876,12 @@ $v-grid-drag-indicator-color: $v-focus-color;
       background: darken($v-grid-drag-indicator-color, 10%);
     }
   }
+
+  // Expand Grid's body to cover the whole Grid
+  .#{$primary-stylename}-body-droptarget {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
