--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -861,7 +861,7 @@ $v-grid-drag-indicator-color: $v-focus-color;
     top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
+    right: 2px;
     border: 2px solid $v-grid-drag-indicator-color;
     pointer-events: none;
   }
@@ -879,8 +879,22 @@ $v-grid-drag-indicator-color: $v-focus-color;
 
   // Expand Grid's body to cover the whole Grid
   .#{$primary-stylename}-body-droptarget {
-    width: 100%;
-    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+  // Show drop hint when the grid is empty or,
+  // if the DropMode.ON_TOP is used and dragging below last row
+  .#{$primary-stylename}-body-drag-top:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 2px;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    border: 2px solid $v-grid-drag-indicator-color;
   }
 }
 
